# storage/api-docs/api-docs.json
@@ -178,14 +178,278 @@
                 }
             }
         },
-        "/send-sms": {
+        "/sms-report": {
             "get": {
                 "tags": [
-                    "auth"
+                    "sms"
                 ],
-                "summary": "Login a user",
-                "description": "Login a user",
+                "summary": "SMS Report",
+                "description": "SMS report endpoint.",
+                "operationId": "reportSms",
+                "parameters": [
+                    {
+                        "name": "start_date",
+                        "in": "query",
+                        "description": "Start date",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "format": "date",
+                            "example": "2021-01-01"
+                        }
+                    },
+                    {
+                        "name": "end_date",
+                        "in": "query",
+                        "description": "End date",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "format": "date",
+                            "example": "2021-01-01"
+                        }
+                    },
+                    {
+                        "name": "status",
+                        "in": "query",
+                        "description": "Status",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "format": "string",
+                            "enum": [
+                                "pending",
+                                "delivered",
+                                "failed"
+                            ]
+                        }
+                    },
+                    {
+                        "name": "sort_by",
+                        "in": "query",
+                        "description": "Sort by",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "format": "string",
+                            "enum": [
+                                "user_id",
+                                "phone",
+                                "send_time"
+                            ]
+                        }
+                    },
+                    {
+                        "name": "sort_direction",
+                        "in": "query",
+                        "description": "Sort direction",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "format": "string",
+                            "enum": [
+                                "asc",
+                                "desc"
+                            ]
+                        }
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "Page number",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "format": "integer",
+                            "example": "1"
+                        }
+                    },
+                    {
+                        "name": "per_page",
+                        "in": "query",
+                        "description": "Number of items per page",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "format": "integer",
+                            "example": "10"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": "true"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "The SMS list has been fetched successfully."
+                                        },
+                                        "data": {
+                                            "type": "object",
+                                            "example": "{\n     *     'id': 1,\n     *     'phone': '905555555555',\n     *     'message': 'Hello World',\n     *     'origin': 'SMS',\n     *     'status': 'delivered',\n     *     'request': {\n     *     rquestData\n     *      },\n     *     'response': {\n     *     responseData\n     *     },\n     *     'send_time': '2021-01-01 00:00:00',\n     *     'request_time': '2021-01-01 00:00:00',\n     *     }"
+                                        },
+                                        "meta": {
+                                            "type": "object",
+                                            "example": "{\n     *     'total': 1,\n     *     'per_page': 10,\n     *     'current_page': 1,\n     *     'last_page': 1,\n     *     'from': 1,\n     *     'to': 1,\n     *     }"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": "false"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "SMS List not found."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/sms-report-detail": {
+            "get": {
+                "tags": [
+                    "sms"
+                ],
+                "summary": "SMS Report Detail",
+                "description": "SMS report detail endpoint.",
+                "operationId": "reportSmsDetail",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "query",
+                        "description": "SMS ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "integer",
+                            "example": "1"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": "true"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "SMS found."
+                                        },
+                                        "data": {
+                                            "type": "object",
+                                            "example": "{\n     * 'id': 1,\n     * 'phone': '905555555555',\n     * 'message': 'Hello World',\n     * 'origin': 'SMS',\n     * 'status': 'delivered',\n     * 'request': {\n     * rquestData\n     * },\n     * 'response': {\n     * responseData\n     * },\n     * 'send_time': '2021-01-01 00:00:00',\n     * 'request_time': '2021-01-01 00:00:00',\n     * }"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": "false"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "SMS not found."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/send-sms": {
+            "post": {
+                "tags": [
+                    "sms"
+                ],
+                "summary": "Send SMS",
+                "description": "Send SMS endpoint.",
                 "operationId": "sendSms",
+                "parameters": [
+                    {
+                        "name": "phone",
+                        "in": "query",
+                        "description": "Phone number",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "string",
+                            "example": "905*********"
+                        }
+                    },
+                    {
+                        "name": "origin",
+                        "in": "query",
+                        "description": "SMS Sender",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "string",
+                            "example": "SMS Sender"
+                        }
+                    },
+                    {
+                        "name": "message",
+                        "in": "query",
+                        "description": "SMS Message",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "string",
+                            "example": "This is message."
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -244,20 +508,8 @@
             "description": "Operations about auth"
         },
         {
-            "name": "user",
-            "description": "Operations about user",
-            "externalDocs": {
-                "description": "Find out more about store",
-                "url": "http://swagger.io"
-            }
-        },
-        {
             "name": "sms",
-            "description": "Operations about report",
-            "externalDocs": {
-                "description": "Find out more about store",
-                "url": "http://swagger.io"
-            }
+            "description": "Operations about report"
         }
     ]
 }
